infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maratea
  labels:
    name: maratea
    environment: development
